Resolve menu spacing issue in mobile view
But the problem is in full desktop view now

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -83,7 +83,7 @@ html.dark {
 
 @media screen and (min-width: 636px) {
   .nav-links {
-    margin-left: 5em;
+    flex: 10;
     display: block;
     position: static;
     width: auto;
@@ -92,11 +92,15 @@ html.dark {
 
   .nav-links a {
     display: inline-block;
-    padding: 15px 20px;
+    padding: 8px 20px;
   }
 
   .menu {
     display: none;
+  }
+
+  nav div {
+    flex: 0 0 auto;
   }
 
   .card {
